solved the h2 spacing problem

--- a/assets/app.css
+++ b/assets/app.css
@@ -58,15 +58,18 @@ h3 {
     color: black;
 }
 
-main {
-    /* background: linear-gradient(#c0eae0, #0EAD69) */
-}
 
 /* *********section container styling ******* */
 .section-outer-box {
     display: flex;
-    align-items: center;
+    flex-direction: row;
+    justify-content: space-evenly;
+    width: 100%;
     margin-bottom: 50px;
+}
+
+h2 {
+    width: 30%;
 }
 
 .section-container {
@@ -94,6 +97,8 @@ main {
     margin: 1%;
     box-shadow: 5px 5px 5px grey;
 }
+
+
 
 .website-preview {
     width: 100%;
